# Portfolio

Progetti_Oslo/IN3110-giorgich/: README.md  dockerfile
Progetti_Oslo/IN3110-giorgich/assignment2/: analyze_pollution_data.py
Progetti_Oslo/IN3110-giorgich/assignment2/analytic_tools/: utilities.py
Progetti_Oslo/IN3110-giorgich/assignment2/tests/: test_utilities.py
Progetti_Oslo/IN3110-giorgich/assignment3/: README.md  pyproject.toml  timing-report.txt
Progetti_Oslo/IN3110-giorgich/assignment3/in3110_instapy/: cli.py  cython_filters.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
Progetti_Oslo/IN3110-giorgich/assignment3/test/: test_numba.py  test_numpy.py  test_python.py
Progetti_Oslo/IN3110-giorgich/assignment4/: fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py  wiki_race_challenge.py
Progetti_Oslo/IN3110-giorgich/assignment4/olympic_games_results/: best_of_sport_by_Gold.md
Progetti_Oslo/IN3110-giorgich/assignment4/tables_of_anniversaries/: anniversaries_december.md  anniversaries_november.md
Progetti_Oslo/IN3110-giorgich/assignment5/: README.md  app.py  http_cache.sqlite  pyproject.toml  requirements.txt  strompris.py
Progetti_Oslo/IN3110-giorgich/assignment5/docs/: conf.py
Progetti_Unito/Java/Prog1/: Email_Executable.jsmooth  Esercizi_Preparazione.java  Lucine.java  Prova.java
Progetti_Unito/Progetto_LFT_Chirio_Giorgio/Es_2/: @Readme.txt  Lexer.java  NumberTok.java  Token.java  test.txt
Progetti_Unito/Progetto_LFT_Chirio_Giorgio/Es_4/: Parser.java  Valutatore.java  test.txt
(+149 files in other folders)
